# rocket_logger

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
src/: fmt.rs  main.rs  sd_card.rs
