[package]
edition = "2021"
name = "rocket_logger"
version = "0.1.0"

[dependencies]
assign-resources = "0.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features =  ["defmt", "time-driver-any", "stm32h750vb", "memory-x", "unstable-pac", "exti"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["tick-hz-1_000_000"] }
futures = { version = "0.3.30", default-features = false }
heapless = "0.8.0"
log = { version = "0.4.22", optional = true }
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
pin-project = { version = "1.1.5", default-features = false }

[[bin]]
name = "rocket_logger"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
log = [
    "dep:log",
]

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b" }
